--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,115 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ 
+.login-page{
+  height: 40vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 30vw;
+  border: 1px solid green;
+  background-color: white !important;
+  gap: 10px;
+}
+body{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  background-color: slategray !important;
+  flex-direction: column;
+ 
+}
+.sign-in-button{
+
+  width:50%;
+  margin:5%
+
+}
+.sign-out{
+  background-color: white;
+  color: green;
+  border: 1px solid green;
+  width: 15%;
+  height: 50px;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.sign-out:hover{
+  background-color: hsl(120, 100%, 85%);
+}
+.heading{
+  width: 50%;
+  color: green;
+  text-align: center;
+}
+.whole-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.delete-icon{
+  width: 27px !important;
+  height: 27px !important;
+  cursor: pointer;
+}
+.edit-icons{
+  width: 27px !important;
+  height: 27px !important;
+  cursor: pointer;
+
+}
+.user-name{
+  font-size: 25px !important;
+  color: white;
+}
+.user-email{
+  color: white;
+}
+
+@media (max-width:600px){
+  .heading{
+    width: 100%;
+    font-size: 1.5rem !important;
+    color: red;
+    
+  }
+  .sign-out{
+    width: 20%;
+    font-size: .9rem !important;
+  }
+  .sign-in-button{
+    width: 100%;
+   
+    display: flex;
+    flex-direction: column;
+  font-size: .7rem !important;
+  background-color: red;
+  }
+
+}
+
+@media (min-width:600px) and (max-width:1000px){
+  .heading{
+    font-size: 2rem !important;
+    width: 100%;
+  }
+  .sign-in-button{
+    width: 80%;
+    margin-left: 1px;
+    margin-right: 1px;
+    display: flex;
+    flex-direction: column;
+    font-size: .7rem !important;
+
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+
