--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ body{
 }
 .sign-in-button{
 
-  width:50%;
+  width:80%;
   margin:5%
 
 }
@@ -34,11 +34,11 @@ body{
   background-color: white;
   color: green;
   border: 1px solid green;
-  width: 15%;
+  width: 17%;
   height: 50px;
   border-radius: 5px;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1.17rem;
 }
 .sign-out:hover{
   background-color: hsl(120, 100%, 85%);
@@ -78,7 +78,7 @@ body{
   .heading{
     width: 100%;
     font-size: 1.5rem !important;
-    color: red;
+   
     
   }
   .sign-out{
@@ -86,30 +86,38 @@ body{
     font-size: .9rem !important;
   }
   .sign-in-button{
-    width: 100%;
+    width: 80%;
+  
    
     display: flex;
     flex-direction: column;
-  font-size: .7rem !important;
-  background-color: red;
+  font-size: .75rem !important;
+
+
   }
 
 }
 
-@media (min-width:600px) and (max-width:1000px){
+@media (min-width:600px) and (max-width:1100px){
   .heading{
     font-size: 2rem !important;
     width: 100%;
   }
   .sign-in-button{
     width: 80%;
-    margin-left: 1px;
-    margin-right: 1px;
+    
+   
     display: flex;
     flex-direction: column;
-    font-size: .7rem !important;
+    font-size: 1rem !important;
+  
 
   }
+}
+
+.update-button{
+  margin-bottom: 10px;
+  margin-top: 5px;
 }
 
 
