--- a/styles/AllStyles.module.css
+++ b/styles/AllStyles.module.css
@@ -24,7 +24,7 @@
     justify-content: center;
     align-items: center;
    
-    width: 15%;
+    width: 17%;
     border: 1px solid gray;
     background-color: green;
     border-radius: 5px;
@@ -34,6 +34,9 @@
     color: white;
     font-weight: bold;
     
+}
+.add_button:hover{
+    background-color: hsl(120, 100%, 18%);
 }
 
 
@@ -48,6 +51,9 @@
     border-radius: 15px;
     background-color: white;
     color: hsl(210, 13%, 30%);
+    flex-wrap: wrap;
+    word-break: break-all;
+  
    
 
 }
@@ -97,7 +103,10 @@
     color: white;
     padding: 5px;
     border-radius: 15px;
-    border: 1px solid white;
+   
+}
+.form>button:hover{
+    background-color: hsl(120, 100%, 18%);
 }
 
 
